# pdf-text-extraction

./: CMakeLists.txt
TextExtraction/: CMakeLists.txt  TextExtraction.cpp  TextExtraction.h  TextPlacementReader.cpp  TextPlacementReader.h
TextExtraction/lib/font-translation/: FontDecoder.cpp  FontDecoder.h
TextExtraction/lib/text-parsing/: ParsedTextPlacement.h  TextInterpreter.cpp  TextInterpreter.h
TextExtractionCLI/: extract-text-cli.cpp
